[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/UILayer/ConnectScreen.gd" type="Script" id=1]

[node name="ConnectScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
custom_constants/separation = 11
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 66.0
text = "127.0.0.1"
placeholder_text = "ip address"

[node name="PortEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 200.0
margin_bottom = 101.0
text = "6996"
placeholder_text = "port"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 200.0
margin_bottom = 132.0
text = "Connect"

[node name="ResponseLabel" type="Label" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 200.0
margin_bottom = 157.0

[connection signal="pressed" from="VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
